--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vueuse/head": "~0.7",
     "pinia": "~2.0",
+    "prettier": "^2.8.1",
     "vue": "~3.2",
     "vue-router": "~4.0"
   },
